# ifb-lib-optimization

./: README-RUS.md  README.md
ifb-lib-cpp/: CMakeLists.txt  CMakePresets.json
ifb-lib-cpp/src/: IFBConstants.h
ifb-lib-cpp/src/Export/: MeshOptimizerExport.cpp  MeshOptimizerExport.h
ifb-lib-cpp/src/Utils/: Async.h
ifb-lib-net/: dotnet.sln
ifb-lib-net/dot_net_ifb_opt_lib/: IFBOptLib.csproj  dot_net_ifb_opt_lib.sln
ifb-lib-net/dot_net_ifb_opt_lib/IFBGraphics/: IFBConstants.cs  IFBMesh.Asyncs.cs  IFBMesh.Classes.cs  IFBMesh.Extensions.cs  IFBMesh.Interfaces.cs  IFBMesh.Internal.cs  IFBMesh.Pocos.cs  IFBMesh.Public.cs  IFBUtils.cs
ifb-lib-net/dot_net_ifb_opt_lib_tests/: IFBOptLib_Tests.csproj  Meshes.cs
ifb-lib-net/dot_net_ifb_opt_lib_tests/TestUtils/: MeshSerializer.cs
ifb-lib-unity/: SampleTransformScroller.cs  Utils.cs  ifb-lib-unity.asmdef
ifb-lib-unity/Meshes/: CompositeMonoMeshSimplifier.cs  ConcurrentFastUnityMesh.cs  EMeshSimplifyStrength.cs  FastUnityMesh.cs  IMeshSimplifier.cs  IUnityMeshHolder.cs  MeshDynamicSimplifier.cs  MeshFilterUnityMeshHolder.cs  MonoMeshSimplifier.cs  MonoMeshSimplifierSceneCollectorForComposite.cs
